# Moltress

./: .gitignore  Cargo.toml  Makefile  README.md
bpf/: kernelsentinel.bpf.c  kernelsentinel_sched_ext.bpf.c
bpf/include/kernelsentinel/: common.h
cli/: go.mod
cli/cmd/kstui/: main.go
cli/internal/app/: model.go
daemon/: Cargo.toml  build.rs
daemon/src/: analytics.rs  config.rs  main.rs  model.rs  policy.rs  runtime.rs  service.rs
deploy/systemd/: kernelsentinel.service
docs/: architecture.md  kernel-source-rationale.md  version-gating.md
examples/: policy.json
proto/: kernelsentinel.proto
scripts/: dump-jit.sh  extract-btf.sh  gen-proto.sh  profile-jit.sh  verifier-stress.sh  vmtest.sh
xtask/: Cargo.toml
xtask/src/: main.rs
