[workspace]
members = ["daemon", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
libbpf-rs = "0.24"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

